--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,71 +1,33 @@
-# Base requirements for production
+# Minimal requirements for Railway deployment
 
 # Web Framework
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 python-multipart==0.0.6
 
-# Oracle Database
-cx-Oracle==8.3.0
-oracledb==2.0.1
-
 # Data Validation
 pydantic==2.5.3
 pydantic-settings==2.1.0
 
-# Database (if using application database)
+# Database
 sqlalchemy==2.0.25
-alembic==1.13.1
-
-# Async Support
-asyncio==3.4.3
-aiofiles==23.2.1
-
-# Caching
-redis==5.0.1
-hiredis==2.3.2
-
-# Task Queue
-celery==5.3.6
-kombu==5.3.5
 
 # Security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
 
 # HTTP Client
 httpx==0.26.0
-aiohttp==3.9.1
 
 # Date/Time
 python-dateutil==2.8.2
 
-# Logging
-python-json-logger==2.0.7
-
 # Environment Variables
 python-dotenv==1.0.0
 
-# CORS
-fastapi-cors==0.0.6
-
-# Rate Limiting
-slowapi==0.1.9
-
 # Utilities
 typing-extensions==4.9.0
-# Production requirements
--r base.txt
 
-# Production Server
-gunicorn==21.2.0
-
-# Monitoring
-prometheus-client==0.19.0
-
-# Production Logging
-sentry-sdk[fastapi]==1.39.2
-
-# Performance
-orjson==3.9.12
+# Note: Oracle dependencies (cx-Oracle, oracledb) removed for Railway deployment
+# They require system libraries (libaio1, Oracle Instant Client)
+# Add them back when deploying with Oracle support
